[gd_scene load_steps=12 format=2]

[ext_resource path="res://app/interface/dummy_container/dummy_container.gd" type="Script" id=1]
[ext_resource path="res://app/modules/playable_track_list/playable_track_list.gd" type="Script" id=2]
[ext_resource path="res://app/interface/icon_button/icon_button.gd" type="Script" id=4]
[ext_resource path="res://app/interface/track/list/track_list_view.tscn" type="PackedScene" id=5]
[ext_resource path="res://app/icons/generic_play.svg" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id=8]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0

[node name="PlayableTrackList" type="VBoxContainer"]
margin_right = 400.0
margin_bottom = 400.0
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="Top" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 72.0

[node name="Title" type="LineEdit" parent="Top"]
margin_right = 324.0
margin_bottom = 72.0
focus_mode = 1
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
align = 1
max_length = 20
caret_blink = true

[node name="Play" type="Button" parent="Top"]
margin_left = 328.0
margin_right = 400.0
margin_bottom = 72.0
mouse_default_cursor_shape = 2
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "TRACK_PLAY_ALL"
icon = ExtResource( 6 )
clip_text = true
script = ExtResource( 4 )

[node name="Contents" type="PanelContainer" parent="."]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 400.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/panel = SubResource( 9 )
script = ExtResource( 1 )

[node name="TrackListView" parent="Contents" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 328.0
editable = true

[node name="Empty" type="Label" parent="Contents"]
margin_top = 141.0
margin_right = 400.0
margin_bottom = 187.0
custom_styles/normal = SubResource( 7 )
align = 1
autowrap = true

[connection signal="focus_exited" from="Top/Title" to="." method="_on_Title_focus_exited"]
[connection signal="text_changed" from="Top/Title" to="." method="_on_Title_text_changed"]
[connection signal="text_entered" from="Top/Title" to="." method="_on_Title_text_entered"]
[connection signal="pressed" from="Top/Play" to="." method="_on_Play_pressed"]
